--- a/README.rdoc
+++ b/README.rdoc
@@ -11,9 +11,9 @@ Testdeployment: https://morning-oasis-7374.herokuapp.com
 
 The typical flow about how to use evalect is:
 
-1. Create a question group by giving it a name.
-2. Once group is created, you can click on the group which takes you to another page where you can manage questions.
-3. Create a question by clicking on add new, and you will be provided by these options: Each question will have a type
+Create a question group by giving it a name.
+Once group is created, you can click on the group which takes you to another page where you can manage questions.
+Create a question by clicking on add new, and you will be provided by these options: Each question will have a type
 
 - Checkbox: Create a question which contains multiple checkboxes with the options that you provide in answer options field. Note that each option should be on a separate line.
 - Date:     It takes date as an answer
@@ -23,7 +23,7 @@ The typical flow about how to use evalect is:
 - Select:   It renders a dropdown by taking answer options.
 - Short:    It takes a string as an answer. Short answer.
 
-4. Once the type is filled, you can optionally fill other details like
+Once the type is filled, you can optionally fill other details like
 
 - Question text:              What is the question?
 - Answer options:             Give options separated by newline for questions of type checkbox, radio buttons or select.
@@ -31,8 +31,8 @@ The typical flow about how to use evalect is:
 - min and max length:         Checks whether answer if in between min and max length. Ignores if blank.
 - greater than and less than: Applicable for numeric question where answer is validated with these values.
 
-5. Once the questions are populated, you can return to root_path ie by clicking Question Groups and share distribute answer url so that others can answer the questions populated.
-6. Note that answers fail to persist of the criteria that you have provided while creating questions fail.
+Once the questions are populated, you can return to root_path ie by clicking Question Groups and share distribute answer url so that others can answer the questions populated.
+Note that answers fail to persist of the criteria that you have provided while creating questions fail.
 
 
 
