--- a/README.rdoc
+++ b/README.rdoc
@@ -37,8 +37,8 @@ Note that answers fail to persist of the criteria that you have provided while c
 
 
 
-TODO  v0.8
+TODO  v0.8beta
 
-Add ability to sort questions, so that order is preserved.
-Add multi tenant support.
-Rename question-groups to surveys, and change routes accordingly.
+(Add ability to sort questions, so that order is preserved.)
+(Add multi tenant support.)
+!!!!!!Rename question-groups to surveys, and change routes accordingly.!!!!!!
